@@ -74,9 +74,9 @@ $language_data = array (
             // category, or have multiple usage/meanings
             'ACTION','ADD','AFTER','ALGORITHM','ALL','ALTER','ANALYZE','ANY',
             'ASC','AS','BDB','BEGIN','BERKELEYDB','BINARY','BTREE','CALL',
-            'CASCADED','CASCADE','CHAIN','CHECK','COLUMNS','COLUMN','COMMENT',
-            'COMMIT','COMMITTED','CONSTRAINT','CONTAINS SQL','CONSISTENT',
-            'CONVERT','CREATE','CROSS','DATA','DATABASES',
+            'CASCADED','CASCADE','CHAIN','CHANGE','CHECK','COLUMNS','COLUMN',
+            'COMMENT','COMMIT','COMMITTED','CONSTRAINT','CONTAINS SQL',
+            'CONSISTENT','CONVERT','CREATE','CROSS','DATA','DATABASES',
             'DECLARE','DEFINER','DELAYED','DELETE','DESCRIBE','DESC',
             'DETERMINISTIC','DISABLE','DISCARD','DISTINCTROW','DISTINCT','DO',
             'DROP','DUMPFILE','DUPLICATE KEY','ENABLE','ENCLOSED BY','ENGINE',
@@ -90,10 +90,10 @@ $language_data = array (
             'MASTER_SERVER_ID','MATCH','MERGE','MIDDLEINT','MODIFIES SQL DATA',
             'MODIFY','MRG_MYISAM','NATURAL','NEXT','NO SQL','NO','ON',
             'OPTIMIZE','OPTIONALLY','OPTION','ORDER BY','OUTER','OUTFILE','OUT',
-            'PARTIAL','PREV','PRIMARY KEY','PRIVILEGES','PROCEDURE','PURGE',
-            'QUICK','READS SQL DATA','READ','REFERENCES','RELEASE','RENAME',
-            'REPEATABLE','REQUIRE','RESTRICT','RETURNS','REVOKE',
-            'ROLLBACK','ROUTINE','RTREE','SAVEPOINT','SELECT',
+            'PARTIAL','PARTITION','PREV','PRIMARY KEY','PRIVILEGES','PROCEDURE',
+            'PURGE','QUICK','READS SQL DATA','READ','REFERENCES','RELEASE',
+            'RENAME','REORGANIZE','REPEATABLE','REQUIRE','RESTRICT','RETURNS',
+            'REVOKE','ROLLBACK','ROUTINE','RTREE','SAVEPOINT','SELECT',
             'SERIALIZABLE','SESSION','SET','SHARE MODE','SHOW','SIMPLE',
             'SNAPSHOT','SOME','SONAME','SQL SECURITY','SQL_BIG_RESULT',
             'SQL_BUFFER_RESULT','SQL_CACHE','SQL_CALC_FOUND_ROWS',
